base/guestbook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - image: ghcr.io/akuity/guestbook@sha256:d8539fe6393df472781dc8b853717e2cacc4237b9a605c4db2623d88a0384432
        name: guestbook
        ports:
        - containerPort: 3000
